<resources>
    <string name="app_name">Baloot</string>
    <string name="article">Article</string>
    <string name="profile">Profile</string>
    <string name="retry">Retry</string>
    <string name="error_occurred">Loading failed!</string>
    <string name="author">Author:</string>
    <string name="title">Title:</string>
    <string name="article_link">Article Link:</string>
    <string name="link">LINK</string>
    <string name="published_at">Published At:</string>
    <string name="description">Description:</string>
    <string name="part_of_content">Part of Content:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_name">Full Name : Pejman Azad Ranjbar</string>
    <string name="about_me">About me</string>
    <string name="description_about_me">I became interested in the world of Android 6 years ago and I am always learning and now I am ready to play a role in the team.</string>
    <string name="search">search</string>
    <string name="token_expired">Token expired</string>
</resources>