<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".ui.fragment.DetailArticleFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_article"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_launcher_background" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/author"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_article" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_author"
            android:layout_width="314dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:autoLink="web"
            android:clickable="true"
            android:ellipsize="end"
            android:focusable="true"
            android:singleLine="true"
            android:textAppearance="@android:style/TextAppearance.Material.Subhead"
            app:layout_constraintBottom_toBottomOf="@+id/materialTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/materialTextView"
            app:layout_constraintTop_toTopOf="@+id/materialTextView"
            tools:text="Author" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/title"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            app:layout_constraintStart_toStartOf="@+id/materialTextView"
            app:layout_constraintTop_toBottomOf="@+id/tv_author" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:minLines="2"
            android:textAppearance="@android:style/TextAppearance.Material.Subhead"
            app:layout_constraintEnd_toEndOf="@+id/tv_author"
            app:layout_constraintStart_toEndOf="@+id/materialTextView2"
            app:layout_constraintTop_toTopOf="@+id/materialTextView2"
            tools:text="Title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/article_link"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            app:layout_constraintStart_toStartOf="@+id/materialTextView"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_link"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:autoLink="web"
            android:clickable="true"
            android:ellipsize="end"
            android:focusable="true"
            android:singleLine="true"
            android:text="@string/link"
            android:textAppearance="@android:style/TextAppearance.Material.Subhead"
            app:layout_constraintBottom_toBottomOf="@+id/materialTextView3"
            app:layout_constraintEnd_toEndOf="@+id/tv_title"
            app:layout_constraintStart_toEndOf="@+id/materialTextView3"
            app:layout_constraintTop_toTopOf="@+id/materialTextView3" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/published_at"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            app:layout_constraintStart_toStartOf="@+id/materialTextView"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView3" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_publish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:textAppearance="@android:style/TextAppearance.Material.Subhead"
            app:layout_constraintBottom_toBottomOf="@+id/materialTextView5"
            app:layout_constraintEnd_toEndOf="@+id/tv_link"
            app:layout_constraintStart_toEndOf="@+id/materialTextView5"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView3"
            tools:text="Published At" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/description"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            app:layout_constraintStart_toStartOf="@+id/materialTextView"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView5" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:minLines="4"
            android:textAppearance="@android:style/TextAppearance.Material.Subhead"
            app:layout_constraintEnd_toEndOf="@+id/tv_publish"
            app:layout_constraintStart_toStartOf="@+id/materialTextView7"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView7"
            tools:text="Description" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/materialTextView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/part_of_content"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            app:layout_constraintStart_toStartOf="@+id/materialTextView"
            app:layout_constraintTop_toBottomOf="@+id/tv_description" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Material.Subhead"
            app:layout_constraintEnd_toEndOf="@+id/tv_description"
            app:layout_constraintStart_toStartOf="@+id/materialTextView7"
            app:layout_constraintTop_toBottomOf="@+id/materialTextView8"
            tools:text="Content" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>